# SSBU_Twitch_Integration

./: Cargo.toml  README.md
.github/workflows/: rust_build.yml
src/: config.rs  lib.rs  sys_line.rs  twitch.rs  utils.rs  voting.rs
src/effects/: curry.rs  death.rs  dmg.rs  double_jumps.rs  final_smash.rs  flight.rs  friction.rs  low_grav.rs  mod.rs  no_hitboxes.rs  no_ledges.rs  reverse_dir.rs  sleep.rs  slow_mo.rs  trip.rs  turbo.rs
src/hooks/: get_param.rs  ledges.rs  mod.rs
