[package]
name = "SSBU_Twitch_Integration"
version = "0.1.0"
authors = ["PiNE"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }
smash_utils = { git = "https://github.com/FaultyPine/smash_utils.git" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web.git" }
smash_script = { git = "https://github.com/blu-dev/smash-script.git" }
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1